@@ -1,3 +1,7 @@
+2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
+	* recover-src/extract_list.c: read_amidxtaped_data(): replace
+	  vstrextend() with g_strdup_printf()
+
 2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
 	* common-src/util.c: remove usage of vstrextend() by using a GString. No
 	  choice here, we have to peek into the GPtrArray.
